change from git bare to gnu stow to manage dotfiles

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -44,6 +44,9 @@ bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
+unbind c
+bind c split-window -h -c "~" nvim
+
 # synchronize all panes in a window
 bind y setw synchronize-panes
 
