--- a/.tmux.conf
+++ b/.tmux.conf
@@ -4,8 +4,9 @@ source-file "${HOME}/.tmux-themepack/powerline/block/blue.tmuxtheme"
 set -g renumber-windows on
 set -g status off
 
-set -g default-terminal "screen-256color"
-#set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
+# set -g default-terminal "screen-256color"
+set -g default-terminal "xterm-256color"
+# set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
 
 set -g history-limit 20000
 
