--- a/.tmux.conf
+++ b/.tmux.conf
@@ -2,7 +2,9 @@ source-file "${HOME}/.tmux-themepack/powerline/block/blue.tmuxtheme"
 #set -g default-command "reattach-to-user-namespace -l zsh"
 # automatically renumber tmux windows
 set -g renumber-windows on
-set -g status off
+set -g status on
+set-option -g status-position top
+set-option -g status-style bg=default
 
 # set -g default-terminal "screen-256color"
 set -g default-terminal "xterm-256color"
@@ -38,6 +40,9 @@ setw -g pane-base-index 1
 #### Key Bindings ####
 ######################
 
+# New session
+bind S command-prompt -p "New Session:" "new-session -A -s '%%'"
+
 # reload config file
 bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 
@@ -45,12 +50,20 @@ bind r source-file ~/.tmux.conf \; display "Config Reloaded!"
 bind | split-window -h -c "#{pane_current_path}"
 bind - split-window -v -c "#{pane_current_path}"
 
-unbind c
-bind c split-window -h -c "~" nvim
+# New window
+unbind t
+bind t split-window -h -c "~" nvim
+
+# Switch windows (the real command is C-<number>. Handled by terminal keybinds)
+# https://www.alt-codes.net/domino-tiles-symbols.php
+bind -n '🀱' select-window -t 1
+bind -n '🀲' select-window -t 2
+bind -n '🀳' select-window -t 3
+bind -n '🀴' select-window -t 4
+bind -n '🀵' select-window -t 5
 
 # synchronize all panes in a window
 bind y setw synchronize-panes
-
 
 # Resize pane shortcuts
 bind -r H resize-pane -L 10
@@ -102,3 +115,14 @@ bind-key -T copy-mode-vi 'C-j' select-pane -D
 bind-key -T copy-mode-vi 'C-k' select-pane -U
 bind-key -T copy-mode-vi 'C-l' select-pane -R
 bind-key -T copy-mode-vi 'C-\' select-pane -l
+
+## Plugins ##
+set -g @plugin 'tmux-plugins/tmux-resurrect'
+set -g @resurrect-strategy-nvim 'session'
+
+set -g @plugin 'tmux-plugins/tmux-continuum'
+set -g @continuum-restore 'on'
+# set -g @continuum-boot 'on'
+
+
+run '~/.tmux/plugins/tpm/tpm'
