--- a/.config/alacritty/alacritty.yml
+++ b/.config/alacritty/alacritty.yml
@@ -6,6 +6,8 @@ window:
         x: 5
         y: 5
 
+    opacity: 0.90
+
     decorations: none
 
     title: Alacritty
@@ -74,21 +76,26 @@ colors:
         cyan: '0xa3f7ff'
         white: '0xffffff'
 
-background_opacity: 0.90
-
 shell:
     program: /bin/zsh
     args:
         - -l
         - -c
-        - 'tmux ls && read tmux_session && tmux attach -t ${tmux_session:-d} || tmux new -s ${tmux_session:-d}'
+        - 'tmux attach || tmux'
 
 hide_when_typing: true
 
 key_bindings:
     - { key: Key0, mods: Control, action: ResetFontSize }
+
+    - { key: Key1, mods: Control, chars: '🀱' }
+    - { key: Key2, mods: Control, chars: '🀲' }
+    - { key: Key3, mods: Control, chars: '🀳' }
+    - { key: Key4, mods: Control, chars: '🀴' }
+    - { key: Key5, mods: Control, chars: '🀵' }
+
     - { key: Equals, mods: Control, action: IncreaseFontSize }
     - { key: Plus, mods: Control, action: IncreaseFontSize }
     - { key: Minus, mods: Control, action: DecreaseFontSize }
     - { key: Key6, mods: Control, chars: "\x1e" }
-    - { key: Slash, mods: Control, chars: ' cc' }
+    - { key: Slash, mods: Control, chars: 'gcc' }
