--- a/.tmux.conf
+++ b/.tmux.conf
@@ -6,6 +6,11 @@ set -g status on
 set-option -g status-position top
 set-option -g status-style bg=default
 
+set -g window-status-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
+set -g window-status-current-format '#I:#(pwd="#{pane_current_path}"; echo ${pwd####*/})#F'
+set-window-option -g window-status-separator '  '
+set-option -g status-interval 5
+
 # set -g default-terminal "screen-256color"
 set -g default-terminal "xterm-256color"
 # set -as terminal-overrides ',xterm*:Tc:sitm=\E[3m'
@@ -61,6 +66,11 @@ bind -n '🀲' select-window -t 2
 bind -n '🀳' select-window -t 3
 bind -n '🀴' select-window -t 4
 bind -n '🀵' select-window -t 5
+
+bind -n '🀶' select-window -t 6
+bind -n '🀷' select-window -t 7
+bind -n '🀸' select-window -t 8
+bind -n '🀹' select-window -t 9
 
 # synchronize all panes in a window
 bind y setw synchronize-panes
